--- a/play-our-song/package.json
+++ b/play-our-song/package.json
@@ -8,7 +8,8 @@
     "downshift": "^3.3.4",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "spotify-web-api-node": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
